--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,45 @@
+body {
+  background-color: #EEEEEE; }
+
 .container {
-  max-width: 400px;
-  margin: 0 auto; }
+  margin: 0;
+  width: 1440px;
+  font-family: 'Open Sans: 400', sans-serif; }
   .container header {
-    margin: 0; }
+    margin: 0;
+    max-width: 100%; }
     .container header ul {
-      list-style: none; }
-    .container header p {
-      margin: 0; }
+      margin: 0;
+      list-style: none;
+      background-color: #FFFFFF;
+      padding: 5px; }
+    .container header .banner {
+      margin: 0;
+      max-width: 100%;
+      height: 250px; }
+      .container header .banner img {
+        height: 150px;
+        max-width: 100%; }
+  .container .main {
+    max-width: 100%;
+    margin-top: 30px;
+    text-align: center;
+    background-color: #EEEEEE; }
+    .container .main .box {
+      border-top: 1px solid #ccc;
+      padding-bottom: 200px; }
+      .container .main .box h1 {
+        display: inline-block;
+        margin: -50px;
+        padding: 5px;
+        background-color: #EEEEEE; }
+  .container .footer {
+    margin: 0;
+    max-width: 100%; }
+    .container .footer p {
+      height: 150px;
+      margin-top: 20px;
+      text-align: center;
+      background: #4B494F;
+      color: #989898;
+      padding: 26px; }
