--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,18 +1,63 @@
 $containerwidth: 400px;
+$mainbackground: #EEEEEE;
+
+body {
+  background-color: $mainbackground;
+}
 
 .container {
-  max-width: $containerwidth;
-  margin: 0 auto;
+  margin: 0;
+  width: 1440px;
+  font-family:'Open Sans: 400', sans-serif;
 
   header {
     margin: 0;
-
+    max-width: 100%;
     ul {
-      list-style: none;
-    }
-
-    p {
       margin: 0;
+      list-style: none;
+      background-color: #FFFFFF;
+      padding: 5px;
+    }
+    .banner {
+      margin: 0;
+      max-width: 100%;
+      height: 250px;
+      img {
+        height: 150px;  
+        max-width: 100%;
+      }
     }
   }
+
+  .main {
+    max-width: 100%;
+    margin-top: 30px;
+    text-align: center;
+    background-color: $mainbackground;
+    .box {
+      border-top: 1px solid #ccc;
+      padding-bottom: 200px;
+      h1 {
+        display: inline-block;
+        margin: -50px;
+        padding: 5px;
+        background-color: $mainbackground;
+      }
+    }
+  }  
+
+  .footer{
+    margin:0;
+    max-width: 100%;
+    p{
+      height: 150px;
+      margin-top: 20px;
+      text-align: center;
+      background: #4B494F;
+      color: #989898;
+      padding: 26px;
+    }
+  }
+
 }
