--- a/scss/main.scss
+++ b/scss/main.scss
@@ -51,12 +51,13 @@ body {
     margin:0;
     max-width: 100%;
     p{
-      height: 150px;
+      height: 60px;
       margin-top: 20px;
       text-align: center;
       background: #4B494F;
       color: #989898;
-      padding: 26px;
+      padding: 5x;
+      padding-top: 50px;
     }
   }
 
