--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 $containerwidth: 400px;
 $mainbackground: #EEEEEE;
+$pagewidth: 1440px;
 
 body {
   background-color: $mainbackground;
@@ -7,8 +8,9 @@ body {
 
 .container {
   margin: 0;
-  width: 1440px;
-  font-family:'Open Sans: 400', sans-serif;
+  width: $pagewidth;
+  font-family: 'Roboto Slab', serif;
+  color: #565656;
 
   header {
     margin: 0;
@@ -16,6 +18,8 @@ body {
     ul {
       margin: 0;
       list-style: none;
+      font-family: 'Roboto', sans-serif;
+      text-color: #4F4E54;
       background-color: #FFFFFF;
       padding: 5px;
     }
@@ -25,7 +29,7 @@ body {
       height: 250px;
       img {
         height: 150px;  
-        max-width: 100%;
+        width: $pagewidth;
       }
     }
   }
@@ -37,12 +41,16 @@ body {
     background-color: $mainbackground;
     .box {
       border-top: 1px solid #ccc;
-      padding-bottom: 200px;
+      padding-bottom: 70px;
       h1 {
         display: inline-block;
         margin: -50px;
         padding: 5px;
         background-color: $mainbackground;
+      }
+      p {
+        margin: 100px;
+        font-size: 20px;
       }
     }
   }  
@@ -51,13 +59,14 @@ body {
     margin:0;
     max-width: 100%;
     p{
-      height: 60px;
-      margin-top: 20px;
+      height: 25px;
+      margin: 0;
       text-align: center;
       background: #4B494F;
       color: #989898;
       padding: 5x;
-      padding-top: 50px;
+      padding-top: 45px;
+      padding-bottom: 10px;
     }
   }
 
