--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,6 +52,9 @@ body {
         margin: 37px;
         font-size: 20px;
       }
+      .materials{
+        margin: 10px;
+      }
     }
   }  
 
