--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,7 +44,8 @@ body {
       padding-bottom: 70px;
       h1 {
         display: inline-block;
-        margin: -50px;
+        font-size: 40px;
+        margin: -55px;
         padding: 5px;
         background-color: $mainbackground;
       }
