--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,8 @@ body {
       padding-bottom: 70px; }
       .container .main .box h1 {
         display: inline-block;
-        margin: -50px;
+        font-size: 40px;
+        margin: -55px;
         padding: 5px;
         background-color: #EEEEEE; }
       .container .main .box p {
